# sonification-zooniverse-qpo

./: README.md  index.html  pyproject.toml
static/audio/: flute_long_tempo_4.aac  flute_long_tempo_6.aac  flute_long_tempo_8.aac  flute_staccato_tempo_6.aac  guitar_tempo_6.aac  piano_tempo_4.aac  piano_tempo_6.aac  piano_tempo_8.aac  synth_continuous.aac
