[project]
name = "sonification-zooniverse-preproto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "mind-the-gaps",
    "moviepy>=2.1.2",
    "nbformat>=5.10.4",
    "notebook>=7.3.2",
    "numba>=0.61.0",
    "numpy<2",
    "plotly>=5.24.1",
    "pydub>=0.25.1",
    "pyfftw>=0.15.0",
    "setuptools>=75.8.0",
    "stingray>=2.0.0rc1",
    "strauss",
]

[tool.uv.sources]
strauss = { git = "https://github.com/james-trayford/strauss.git" }
mind-the-gaps = { git = "https://github.com/smangham/mind_the_gaps.git" }

